--- a/src/global/_variables.css
+++ b/src/global/_variables.css
@@ -5,6 +5,7 @@
   --brand-purple: #570d37;
   --brand-violet: #e000cf;
   --brand-magenta: #831453;
+  --brand-steel-blue: #3d7a98;
 
   --brand-grey-darker: #201f1f;
   --brand-grey-dark: #303030;
